fix/spill on boxy

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  width: 100%;
+  max-width: 100%;
 }
 
 :root {
